syntax = "proto3";

package ticktrader.algo.server.publicApi;

option csharp_namespace = "TickTrader.Algo.Server.PublicAPI";

import "Management/base.request.proto";

import "Info/package.info.proto";
import "Info/plugin.info.proto";
import "Info/account.info.proto";
import "Info/server.metadata.info.proto";
import "Info/autoupdate.info.proto";


message AlgoServerMetadataUpdate {
    ApiMetadataInfo api_metadata = 1;
    MappingCollectionInfo mappings_collection = 2;
    SetupContextInfo setup_context = 3;

    repeated PackageInfo packages = 4;
    repeated AccountModelInfo accounts = 5;
    repeated PluginModelInfo plugins = 6;

    ServerVersionInfo current_version = 7;
    UpdateServiceInfo update_svc = 8;

    RequestResult exec_result = 101;
}